--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -139,7 +139,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/empty"
   /open_connection:
     post:
@@ -165,7 +165,7 @@ paths:
                 port:
                   type: integer
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/empty"
   /close_connection:
     post:
@@ -187,7 +187,7 @@ paths:
                 node_id:
                   type: string
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/empty"
   /get_connections:
     post:
@@ -199,7 +199,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -222,7 +222,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -238,7 +238,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -259,20 +259,7 @@ paths:
       description: Creates a backup file for the given DID wallet.
       operationId: did_create_backup_file
       requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - wallet_id
-                - filename
-              properties:
-                wallet_id:
-                  type: integer
-                  format: uint32
-                filename:
-                  type: string
+        $ref: "#/components/requestBodies/wallet_id"
       responses:
         "200":
           description: OK
@@ -285,6 +272,53 @@ paths:
                       wallet_id:
                         type: integer
                         format: uint32
+                      backup_data:
+                        type: string
+                  - $ref: "#/components/schemas/apiResponse"
+  /did_transfer_did:
+    post:
+      tags:
+        - DID Wallet
+      summary: Transfer the given DID to another owner.
+      description: Transfer the given DID wallet to another owner.
+      operationId: did_transfer_did
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - wallet_id
+                - filename
+              properties:
+                wallet_id:
+                  type: integer
+                  format: uint32
+                inner_address:
+                  type: string
+                  format: hex
+                fee:
+                  type: integer
+                  format: uint64
+                  default: 0
+                with_recovery_info:
+                  type: boolean
+                  default: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - type: object
+                    properties:
+                      transaction:
+                        $ref: "#/components/schemas/transaction_record"
+                      transaction_id:
+                        type: string
+                        format: hex
                   - $ref: "#/components/schemas/apiResponse"
   /did_get_information_needed_for_recovery:
     post:
@@ -324,8 +358,8 @@ paths:
     post:
       tags:
         - DID Wallet
-      summary: Creates an attestation file for the given DID wallet.
-      description: Creates an attestation file for the given DID wallet.
+      summary: Creates an attestment for the given DID wallet.
+      description: Creates an attestment for the given DID wallet.
       operationId: did_create_attest
       requestBody:
         required: true
@@ -338,7 +372,6 @@ paths:
                 - coin_name
                 - pubkey
                 - puzhash
-                - filename
               properties:
                 wallet_id:
                   type: integer
@@ -352,8 +385,6 @@ paths:
                 puzhash:
                   type: string
                   format: hex
-                filename:
-                  type: string
       responses:
         "200":
           description: OK
@@ -363,7 +394,22 @@ paths:
                 allOf:
                   - type: object
                     properties:
-                      pubkey:
+                      message_spend_bundle:
+                        type: string
+                        format: hex
+                      info:
+                        type: array
+                        items: # [string, string uint64]
+                          oneOf:
+                            - type: string
+                              format: hex
+                            - type: string
+                              format: hex
+                            - type: integer
+                              format: uint64
+                          minItems: 3
+                          maxItems: 3
+                      attest_data:
                         type: string
                         format: hex
                   - $ref: "#/components/schemas/apiResponse"
@@ -389,6 +435,40 @@ paths:
                         type: string
                         format: hex
                   - $ref: "#/components/schemas/apiResponse"
+  /did_get_current_coin_info:
+    post:
+      tags:
+        - DID Wallet
+      summary: Retrieves the public key for the given DID wallet.
+      description: Retrieves the public key for the given DID wallet.
+      operationId: did_get_current_coin_info
+      requestBody:
+        $ref: "#/components/requestBodies/wallet_id"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - type: object
+                    properties:
+                      wallet_id:
+                        type: integer
+                        format: uint32
+                      my_did:
+                        type: string
+                        format: hex
+                      did_parent:
+                        type: string
+                        format: hex
+                      did_innerpuz:
+                        type: string
+                        format: hex
+                      did_amount:
+                        type: integer
+                        format: uint64
+                  - $ref: "#/components/schemas/apiResponse"
   /did_recovery_spend:
     post:
       tags:
@@ -404,12 +484,12 @@ paths:
               type: object
               required:
                 - wallet_id
-                - attest_filenames
+                - attest_data
               properties:
                 wallet_id:
                   type: integer
                   format: uint32
-                attest_filenames:
+                attest_data:
                   type: array
                   items:
                     type: string
@@ -428,12 +508,8 @@ paths:
                 allOf:
                   - type: object
                     properties:
-                      reason:
-                        type: string
-                        description: >-
-                          The optional reason that the spend failed:
-                            if len(request["attest_filenames"]) < wallet.did_info.num_of_backup_ids_needed:
-                              return {"success": False, "reason": "insufficient messages"}
+                      spend_bundle:
+                        $ref: "#/components/schemas/spend_bundle"
                   - $ref: "#/components/schemas/apiResponse"
   /did_get_recovery_list:
     post:
@@ -506,6 +582,7 @@ paths:
               type: object
               required:
                 - wallet_id
+                - new_list
               properties:
                 wallet_id:
                   type: integer
@@ -521,6 +598,131 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/empty"
+  /did_set_wallet_name:
+    post:
+      tags:
+        - DID Wallet
+      summary: Sets the name of a DID wallet.
+      description: Sets the name of a DID wallet.
+      operationId: did_set_wallet_name
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - wallet_id
+                - name
+              properties:
+                wallet_id:
+                  type: integer
+                  format: uint32
+                name:
+                  type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
+                  - type: object
+                    properties:
+                      wallet_id:
+                        type: integer
+                        format: uint32
+  /did_get_wallet_name:
+    post:
+      tags:
+        - DID Wallet
+      summary: Gets the name of a DID wallet.
+      description: Gets the name of a DID wallet.
+      operationId: did_get_wallet_name
+      requestBody:
+        $ref: "#/components/requestBodies/wallet_id"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
+                  - type: object
+                    properties:
+                      wallet_id:
+                        type: integer
+                        format: uint32
+  /did_update_metadata:
+    post:
+      tags:
+        - DID Wallet
+      summary: Updates the metadata for a DID wallet.
+      description: Updates the metadata for a DID wallet.
+      operationId: did_update_metadata
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - wallet_id
+              properties:
+                wallet_id:
+                  type: integer
+                  format: uint32
+                metadata:
+                  type: object
+                  additionalProperties:
+                    type: string
+                fee:
+                  type: integer
+                  format: uint64
+                  default: 0
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
+                  - type: object
+                    properties:
+                      wallet_id:
+                        type: integer
+                        format: uint32
+                      spend_bundle:
+                        $ref: "#/components/schemas/spend_bundle"
+  /did_get_metadata:
+    post:
+      tags:
+        - DID Wallet
+      summary: Gets the metadata of a DID wallet.
+      description: Gets the metadata of a DID wallet.
+      operationId: did_get_metadata
+      requestBody:
+        $ref: "#/components/requestBodies/wallet_id"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
+                  - type: object
+                    properties:
+                      wallet_id:
+                        type: integer
+                        format: uint32
+                      metadata:
+                        type: object
+                        additionalProperties:
+                          type: string
   /take_offer:
     post:
       tags:
